minecraft-rustdesk-safe-iptables/lockdown-iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --dport 21115 -j ACCEPT
-A OUTPUT -p tcp --sport 21115 -j ACCEPT
-A INPUT -p tcp --dport 25565 -j ACCEPT
-A OUTPUT -p tcp --sport 25565 -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT
# -A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -j DROP

COMMIT
